Fixed NTUPLES header selection fixed missing scrollbar

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,4 @@
 @include meta.load-css("components/table");
 @include meta.load-css("components/admin");
 
-body {
-  overflow: hidden;
-}
+
